--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "langchain-core>=0.3.72",
     "langchain-ollama>=0.3.6",
     "langchain-text-splitters>=0.3.9",
+    "langextract>=1.0.1",
     "sentence-transformers>=5.0.0",
     "transformers>=4.54.1",
 ]
